# LibRawGo

./: .gitignore  CMakeLists.txt  License.md  Makefile  build.sh  go.sum  readme.md  test.go
include/: libraw.h  libraw_alloc.h  libraw_datastream.h  libraw_types.h  librawgo.h
include/internal/: libraw_cxx_defs.h
include/libraw/: libraw.h  libraw_alloc.h  libraw_datastream.h  libraw_internal.h  libraw_types.h
librawgo/: CMakeCache.txt  Makefile  cmake_install.cmake  librawgo.go
src/: float.i  libraw_c_api.cpp  libraw_c_api.cxx  librawgo.i  librawstubs.c
src/decoders/: decoders.i  fuji_compressed.cpp
src/integration/: integration.i
src/postprocessing/: postprocessing.i
src/preprocessing/: preprocessing.i
src/tables/: cameralist.cpp  tables.i
src/utils/: utils.i
src/write/: write.i
